--- a/CourtLink/src/app/components/navbar/navbar.component.html
+++ b/CourtLink/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-[#275897] text-white px-6 py-4 h-12 flex items-center justify-between relative">
+<nav class="bg-[#005B8D] text-white px-6 py-4 h-12 flex items-center justify-between relative">
     <!-- University Logo on the Left -->
     <a href="/" class="flex items-center">
         <img src="https://i.bleacherreport.net/images/team_logos/328x328/florida_gators_football.png?canvas=492,328" alt="UF Logo" class="h-12 mr-3">
