Added Routing for Components

--- a/CourtLink/src/app/app.component.html
+++ b/CourtLink/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-navbar></app-navbar>
-<app-sports></app-sports>
+<app-navbar></app-navbar> <!-- Navbar Component -->
+<!-- <app-sports></app-sports> --> <!-- Sports Component (before router-outlet) -->
+
+<!-- This is where the route change happens. -->
+<router-outlet></router-outlet> <!-- Courts Component will be loaded here when selected -->
