--- a/CourtLink/src/app/components/navbar/navbar.component.html
+++ b/CourtLink/src/app/components/navbar/navbar.component.html
@@ -1,42 +1,44 @@
-<nav class="bg-[#005B8D] text-white px-6 py-4 h-12 flex items-center justify-between relative">
-  <!-- University Logo on the Left -->
-  <a href="/" class="flex items-center">
-    <img src="https://i.bleacherreport.net/images/team_logos/328x328/florida_gators_football.png?canvas=492,328" alt="UF Logo" class="h-12 mr-3">
-    <span class="text-xl font-bold">UFCourtLink</span>
-  </a>
-  
-  <div class="flex justify-between items-center">
-    <div class="absolute left-1/2 transform -translate-x-1/2 w-100">
-      <div class="relative w-80">
-        <input type="text" placeholder="Search..." class="px-4 py-2 rounded-md text-gray-800 w-full placeholder-gray-500 pr-10">
-  
-        <!-- New Search Icon (SVG) -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="absolute top-1/2 right-3 transform -translate-y-1/2 w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns:xlink="http://www.w3.org/1999/xlink">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 19l-4-4M12 5a7 7 0 11-7 7 7 7 0 017-7z"></path>
-        </svg>
+<div class="bg-gradient-to-b from-[#005B8D] to-[#F26A2E]">
+  <nav class="bg-[#005B8D] text-white px-6 py-4 h-17 flex items-center justify-between relative">
+    <!-- University Logo on the Left -->
+    <a href="/" class="flex items-center">
+      <img src="https://i.bleacherreport.net/images/team_logos/328x328/florida_gators_football.png?canvas=492,328" alt="UF Logo" class="h-12 mr-3">
+      <span class="text-xl font-bold">UFCourtLink</span>
+    </a>
+    
+    <div class="flex justify-between items-center">
+      <div class="absolute left-1/2 transform -translate-x-1/2 w-100">
+        <div class="relative w-80">
+          <input type="text" placeholder="Search..." class="px-4 py-2 rounded-md text-gray-800 w-full placeholder-gray-500 pr-10">
+    
+          <!-- New Search Icon (SVG) -->
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute top-1/2 right-3 transform -translate-y-1/2 w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 19l-4-4M12 5a7 7 0 11-7 7 7 7 0 017-7z"></path>
+          </svg>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- User Profile Icon -->
-  <div class="absolute top-4 right-6 flex space-x-4">
-    <ng-container *ngIf="auth.user$ | async as user; else loggedOut">
-      <button mat-icon-button (click)="logout()">
-        <!-- Check if the user has a picture -->
-        <img *ngIf="user.picture; else defaultIcon" [src]="user.picture" [alt]="user.name" class="h-10 w-10 rounded-full">
-        
-        <!-- Fallback Green Icon if no picture is found -->
-        <ng-template #defaultIcon>
-          <img src="https://via.placeholder.com/150/4CAF50/FFFFFF?text=No+Image" alt="Default Green Icon" class="h-10 w-10 rounded-full">
-        </ng-template>
-      </button>
-    </ng-container>
+    <!-- User Profile Icon -->
+    <div class="absolute top-4 h-14 right-6 flex space-x-4">
+      <ng-container *ngIf="auth.user$ | async as user; else loggedOut">
+        <button mat-icon-button (click)="logout()">
+          <!-- Check if the user has a picture -->
+          <img *ngIf="user.picture; else defaultIcon" [src]="user.picture" [alt]="user.name" class="h-10 w-10 rounded-full">
+          
+          <!-- Fallback Green Icon if no picture is found -->
+          <ng-template #defaultIcon>
+            <img src="https://via.placeholder.com/150/4CAF50/FFFFFF?text=No+Image" alt="Default Green Icon" class="h-10 w-10 rounded-full">
+          </ng-template>
+        </button>
+      </ng-container>
 
-    <ng-template #loggedOut>
-      <!-- Default profile icon when not authenticated -->
-      <button mat-icon-button (click)="login()">
-        <mat-icon class="text-white">account_circle</mat-icon>
-      </button>
-    </ng-template>
-  </div>
-</nav>
+      <ng-template #loggedOut>
+        <!-- Default profile icon when not authenticated -->
+        <button mat-icon-button (click)="login()">
+          <mat-icon class="text-white">account_circle</mat-icon>
+        </button>
+      </ng-template>
+    </div>
+  </nav>
+</div>
