Made changes to the sports component to send a JSOn with sport selected to BackEnd

--- a/CourtLink/src/app/app.component.html
+++ b/CourtLink/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-navbar></app-navbar> <!-- Navbar Component -->
-<!-- <app-sports></app-sports> --> <!-- Sports Component (before router-outlet) -->
-
-<!-- This is where the route change happens. -->
-<router-outlet></router-outlet> <!-- Courts Component will be loaded here when selected -->
+<app-navbar></app-navbar>
+<div class="main-content pt-20">
+  <router-outlet></router-outlet>
+</div>
