--- a/CourtLink/src/app/app.component.html
+++ b/CourtLink/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
+<app-navbar *ngIf="showNavbar"></app-navbar>
+
 <div class="main-content pt-20">
   <router-outlet></router-outlet>
 </div>
